# time-tracking-skillbox

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  time_tracking_skillbox.drawio
mysql/: schema.sql
src/constants/: __init__.py  constants.py
src/database/: crud.py  engine.py  models.py
src/database/exceptions/: __init__.py  exceptions.py
src/database/queries/: __init__.py  queries.py
src/database/utils/: __init__.py  pprint.py  read_csv.py
src/settings/: settings.py
