[tool.poetry]
name = "time-tracking-skillbox"
version = "0.1.0"
description = ""
authors = ["DaaN1L <dorofeev-danila@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
click = "^8.1.7"
pydantic-settings = "^2.6.1"
pymysql = "^1.1.1"
notebook = "^7.2.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
